--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -14,6 +14,10 @@
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"
+    />
     <script
       src="https://kit.fontawesome.com/ef4d8267ec.js"
       crossorigin="anonymous"
